--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <groupId>com.yanll</groupId>
         <artifactId>frameworks</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../frameworks/pom.xml</relativePath>
     </parent>
 
     <modules>
