--- a/platforms-console/console-auth/pom.xml
+++ b/platforms-console/console-auth/pom.xml
@@ -14,11 +14,6 @@
     <dependencies>
         <dependency>
             <groupId>com.yanll.platforms</groupId>
-            <artifactId>console-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.yanll.platforms</groupId>
             <artifactId>business-service-auth</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -28,4 +23,25 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.yanll.frameworks</groupId>
+                <artifactId>maven-plugin-demo</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>sayhi</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <greeting>Welcome</greeting>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
