--- a/platforms-api/pom.xml
+++ b/platforms-api/pom.xml
@@ -17,26 +17,8 @@
     <dependencies>
         <dependency>
             <groupId>com.yanll.frameworks</groupId>
-            <artifactId>frameworks-util</artifactId>
+            <artifactId>frameworks-auth</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.yanll.frameworks</groupId>
-            <artifactId>frameworks-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.yanll.frameworks</groupId>
-            <artifactId>frameworks-web</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
     </dependencies>
 
