--- a/platforms-business/pom.xml
+++ b/platforms-business/pom.xml
@@ -22,12 +22,12 @@
     <dependencies>
         <dependency>
             <groupId>com.yanll.frameworks</groupId>
-            <artifactId>frameworks-util</artifactId>
+            <artifactId>frameworks-data</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.yanll.frameworks</groupId>
-            <artifactId>frameworks-core</artifactId>
+            <artifactId>frameworks-auth</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
