--- a/platforms-console/console-auth/src/main/resources/application.properties
+++ b/platforms-console/console-auth/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://192.168.88.128:3306/auth_center?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&allowMultiQueries=true
-spring.datasource.username=root
-spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=${mysql.server}/auth_center?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&allowMultiQueries=true
+spring.datasource.username=${mysql.username}
+spring.datasource.password=${mysql.password}
 #
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
