--- a/auth-console/pom.xml
+++ b/auth-console/pom.xml
@@ -31,47 +31,23 @@
             <artifactId>frameworks-data</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>tk.techforge</groupId>
+            <artifactId>patron</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!--分布式环境时不允许引入实现，只能引入Facade-->
         <dependency>
             <groupId>com.yanll.auth</groupId>
             <artifactId>auth-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!--<dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-core</artifactId>
-            <version>2.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-spring-web</artifactId>
-            <version>2.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>2.7.0</version>
-        </dependency>-->
+
     </dependencies>
 
     <build>
         <plugins>
-            <!--<plugin>
-                <groupId>com.yanll.frameworks</groupId>
-                <artifactId>maven-plugin-demo</artifactId>
-                <version>1.0-SNAPSHOT</version>
-                <executions>
-                    <execution>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>sayhi</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    &lt;!&ndash;<greeting>Welcome</greeting>&ndash;&gt;
-                </configuration>
-            </plugin>-->
+
         </plugins>
     </build>
 
