--- a/auth-console/src/main/resources/application.properties
+++ b/auth-console/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://docker:3306/AUTH_CENTER
+spring.datasource.url=jdbc:mysql://docker:3306/auth_center?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=root
 #
 mybatis.config-location=classpath:mybatis-config.xml
 #
 spring.banner.location=banner.txt
+
+spring.mvc.static-path-pattern=/static/**
