--- a/auth-console/src/main/resources/application.properties
+++ b/auth-console/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://docker:3306/auth_center?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://local_docker:3306/auth_center?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=root
 #
